start AVL complexity analysis

--- a/relatorio.tex
+++ b/relatorio.tex
@@ -28,5 +28,29 @@
     \section{Análise das Complexidades}
     \subsection{Estrutura 1 - Hash Table}
     \subsection{Estrutura 2 - AVL}
+    \begin{table}[h]
+        \centering
+        \begin{tabular}{|l|c|}
+            \hline
+            \multicolumn{1}{|c|}{\textbf{Função Trivial}} & \multicolumn{1}{c|}{\textbf{Complexidade de tempo}} \\ \hline
+            \texttt{avl\_status\_string} & $O(1)$ \\ \hline
+            \texttt{create\_matrix\_avl} & $O(1)$ \\ \hline
+            \texttt{transpose\_avl} & $O(1)$ \\ \hline
+            \texttt{\_allocation\_fail} & $O(1)$ \\ \hline
+            \texttt{\_validate\_matrix} & $O(1)$ \\ \hline
+            \texttt{\_validate\_indices} & $O(1)$ \\ \hline
+            \texttt{\_validate\_same\_dimensions} & $O(1)$ \\ \hline
+            \texttt{\_height\_i} & $O(1)$ \\ \hline
+            \texttt{\_height\_o} & $O(1)$ \\ \hline
+            \texttt{\_balance\_factor\_i} & $O(1)$ \\ \hline
+            \texttt{\_balance\_factor\_o} & $O(1)$ \\ \hline
+            \texttt{\_max} & $O(1)$ \\ \hline
+            \texttt{\_left\_rotate\_i} & $O(1)$ \\ \hline
+            \texttt{\_right\_rotate\_i} & $O(1)$ \\ \hline
+            \texttt{\_left\_rotate\_o} & $O(1)$ \\ \hline
+            \texttt{\_right\_rotate\_o} & $O(1)$ \\ \hline
+        \end{tabular}
+        \caption{Funções triviais de tempo constante na estrutura AVL.}
+    \end{table}
     
 \end{document}
